# index

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  POSTMARK_OUTBOUND_SETUP.md  fly.toml  idea.tdsl  pyproject.toml  todo.tdsl
db/: schema.sql
docs/: line-filtering-dilemma.md
ideas/: design.tdsl  dns.tdsl  grammar.tdsl  idea.tdsl  qa.tdsl
src/: email_utils.py  main.py  parser.py  rank.py  reducer.py  render.py  storage.py
src/static/css/: base.css  lists.css  markdown.css  votes.css
src/templates/: _attribute_selector.html  _github_corner.html  compare.html  email.html  hashtag.html  index.html  user.html
src/todo/: ai_voter.py  routes.py  storage.py  ui.py
tests/: __init__.py  test_ai_sorter.py  test_disconnected_components.py  test_integration_vote_links.py  test_line_filtering_edge_cases.py  test_parser.py  test_tarjans_scc.py  test_tutorial_integration.py
tests/data/: regex-builders.sorter  rhetoric.sorter  tutorial.sorter
