[project]
name = "email"
version = "0.1.0"
description = "Email application with FastAPI and rank centrality algorithm"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "uvicorn[standard]>=0.30.0",
    "postmarker>=1.0.0",
    "python-slugify>=8.0.0",
    "lark>=1.1.0",
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "humanize>=4.14.0",
    "markdown>=3.10",
    "python-hiccup>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # Error, Flake8, Warnings, Isort

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
